--- a/MusicaPerfil/Base.lproj/Main.storyboard
+++ b/MusicaPerfil/Base.lproj/Main.storyboard
@@ -171,30 +171,53 @@
                                                             <constraint firstItem="dCs-iy-K2T" firstAttribute="leading" secondItem="8vd-R5-0zI" secondAttribute="leadingMargin" constant="-8" id="yXe-KB-wFT"/>
                                                         </constraints>
                                                     </view>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="poweron" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ea4-cl-OuQ">
+                                                        <rect key="frame" x="32" y="359" width="28" height="40"/>
+                                                        <color key="tintColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="28" id="8Ec-AG-XGR"/>
+                                                            <constraint firstAttribute="height" constant="42.333333333333314" id="F1Z-tt-xFL"/>
+                                                        </constraints>
+                                                    </imageView>
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.80000000000000004" green="0.36470588240000001" blue="0.29803921570000003" alpha="1" colorSpace="calibratedRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="8vd-R5-0zI" secondAttribute="bottom" constant="50" id="6qg-n2-32Y"/>
                                                     <constraint firstItem="FZ7-4l-Sw1" firstAttribute="leading" secondItem="k38-Y3-alk" secondAttribute="leading" constant="20" id="7Uy-Tg-BfB"/>
                                                     <constraint firstItem="je7-m8-Lgn" firstAttribute="top" secondItem="k38-Y3-alk" secondAttribute="top" constant="68" id="McP-kz-Okr"/>
+                                                    <constraint firstItem="Ea4-cl-OuQ" firstAttribute="top" secondItem="8vd-R5-0zI" secondAttribute="bottom" constant="7.6666666666666856" id="Nug-DU-WOp"/>
                                                     <constraint firstItem="FZ7-4l-Sw1" firstAttribute="centerX" secondItem="je7-m8-Lgn" secondAttribute="centerX" id="Qqf-7G-qQE"/>
                                                     <constraint firstItem="8vd-R5-0zI" firstAttribute="trailing" secondItem="FZ7-4l-Sw1" secondAttribute="trailing" id="R4B-gY-IZr"/>
                                                     <constraint firstItem="8vd-R5-0zI" firstAttribute="leading" secondItem="FZ7-4l-Sw1" secondAttribute="leading" id="ZNw-92-BIx"/>
                                                     <constraint firstAttribute="bottom" secondItem="cdk-KT-Kx6" secondAttribute="bottom" constant="94" id="fRy-SX-nCv"/>
                                                     <constraint firstItem="FZ7-4l-Sw1" firstAttribute="centerX" secondItem="k38-Y3-alk" secondAttribute="centerX" id="kFA-dP-7i4"/>
                                                     <constraint firstItem="cdk-KT-Kx6" firstAttribute="centerX" secondItem="je7-m8-Lgn" secondAttribute="centerX" id="lkg-SE-RuS"/>
+                                                    <constraint firstAttribute="bottom" secondItem="Ea4-cl-OuQ" secondAttribute="bottom" id="pUJ-Ax-dnd"/>
                                                     <constraint firstItem="8vd-R5-0zI" firstAttribute="top" secondItem="cdk-KT-Kx6" secondAttribute="bottom" constant="21" id="qJ9-LZ-Chn"/>
                                                     <constraint firstItem="FZ7-4l-Sw1" firstAttribute="top" secondItem="k38-Y3-alk" secondAttribute="top" constant="19" id="rAu-nW-Ony"/>
                                                     <constraint firstItem="cdk-KT-Kx6" firstAttribute="top" secondItem="je7-m8-Lgn" secondAttribute="bottom" constant="8" symbolic="YES" id="u9s-lh-ycZ"/>
+                                                    <constraint firstItem="Ea4-cl-OuQ" firstAttribute="leading" secondItem="k38-Y3-alk" secondAttribute="leading" constant="32" id="zSU-fn-nTh"/>
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sog-lK-jQu">
                                                 <rect key="frame" x="0.0" y="400" width="390" height="400"/>
+                                                <subviews>
+                                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="xoP-Ks-Xcp">
+                                                        <rect key="frame" x="0.0" y="0.0" width="390" height="400"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                    </tableView>
+                                                </subviews>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="trailing" secondItem="xoP-Ks-Xcp" secondAttribute="trailing" id="7yy-Bp-LvF"/>
+                                                    <constraint firstItem="xoP-Ks-Xcp" firstAttribute="leading" secondItem="sog-lK-jQu" secondAttribute="leading" id="Mdr-el-Wg1"/>
+                                                    <constraint firstAttribute="bottom" secondItem="xoP-Ks-Xcp" secondAttribute="bottom" id="YNA-Ec-cy3"/>
+                                                    <constraint firstItem="xoP-Ks-Xcp" firstAttribute="top" secondItem="sog-lK-jQu" secondAttribute="top" id="Yr5-vC-DIw"/>
+                                                </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uMp-6g-BCt">
                                                 <rect key="frame" x="0.0" y="800" width="390" height="400"/>
-                                                <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                         </subviews>
                                         <constraints>
@@ -227,6 +250,7 @@
                     <connections>
                         <outlet property="imagepfp" destination="WII-7z-beq" id="hFB-aR-KgA"/>
                         <outlet property="likeButton" destination="LDj-00-gtJ" id="XOU-Px-Gcl"/>
+                        <outlet property="tableView" destination="xoP-Ks-Xcp" id="jLO-8N-Wbo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -242,11 +266,9 @@
         <image name="line.3.horizontal" catalog="system" width="128" height="64"/>
         <image name="music.note" catalog="system" width="97" height="128"/>
         <image name="person.and.person.fill" catalog="system" width="128" height="80"/>
+        <image name="poweron" catalog="system" width="39" height="128"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemBrownColor">
-            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
